src/test/ui/type-alias/issue-62305-self-assoc-ty.rs
type Alias = Self::Target;
//~^ ERROR failed to resolve: use of undeclared type `Self` [E0433]

fn main() {}
